# de-platform

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/dbt-profiles/: profiles.yml
.github/workflows/: ci.yml  deploy-staging.yml
apps/ride_sharing/: streamlit_app.py
configs/: settings.py
data_quality/ride_sharing/: gx_suite.py
dbt/: dbt_project.yml
docs/projects/ride_sharing/: real-time-lakehouse-code-walkthrough.md  real-time-lakehouse-scenarios.md  real-time-lakehouse.md
docs/projects/social_sentiment/: social-media-sentiment-code-walkthrough.md  social-media-sentiment-scenarios.md  social-media-sentiment.md
infrastructure/docker/kafka-connect/: Dockerfile
ingestion/batch/apis/: nyc_taxi_api.py
ingestion/streaming/ride_sharing/: gps_producer.py
ingestion/streaming/social_sentiment/: kafka_producer.py
notebooks/exploration/: Untitled.ipynb
orchestration/tests/: test_dag_validation.py
processing/spark/streaming/social_sentiment/: sentiment_processor.py
scripts/: init_db.sql
scripts/snowflake/: setup_ride_sharing.sql  setup_social_sentiment.sql
tests/unit/: test_placeholder.py
