[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | dbt/target
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ingestion", "processing", "orchestration", "data_quality"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true    # ← ADD THIS LINE — fixes duplicate module error
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"
markers = [
    "unit: fast unit tests (no external dependencies)",
    "integration: tests requiring real services (Kafka, Snowflake)",
    "e2e: full end-to-end tests",
    "slow: tests that take more than 30 seconds",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"
